Fix distance alignment (#1006)
Fix distance alignment for financial-professional-location and professional-location cards so that distance is on the far right of the top row of the card instead of right next to the title. Also, fix distance alignment with the close card button on vertical full page map for both cards and location-standard cards so that distance is in-line to the left of the button.

J=SLAP-1718
TEST=manual

Check that both professional location cards (and multilang) have correct distance alignment, matching the location-standard card. Check that mobile view of vertical full page map has correct alignment of distance with close card button for location-standard card

--- a/static/scss/answers/interactive-map/VerticalFullPageMap.scss
+++ b/static/scss/answers/interactive-map/VerticalFullPageMap.scss
@@ -583,6 +583,7 @@
       position: relative;
       top: 1px;
       margin-left: auto;
+      display: flex;
     }
 
     &-closeCardButton {
@@ -591,6 +592,7 @@
       font-size: 16px;
       font-weight: bold;
       justify-content: flex-end;
+      padding-left: var(--yxt-base-spacing);
     }
   }
 
